--- a/MarvisConsole/packages.config
+++ b/MarvisConsole/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
   <package id="Magick.NET-Q16-AnyCPU" version="7.11.1" targetFramework="net461" />
 </packages>
