--- a/MarvisConsole/packages.config
+++ b/MarvisConsole/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
   <package id="Magick.NET-Q16-AnyCPU" version="7.11.1" targetFramework="net461" />
+  <package id="OpenTK" version="3.1.0" targetFramework="net461" />
 </packages>
